NATTQA-ENV/force-app/main/default/objects/Requested_Ship_Dates__c/Requested_Ship_Dates__c.object-meta.xml
<CustomObject>
    <label>Requested Ship Date</label>
    <nameField>
        <displayFormat>RSD-{0000}</displayFormat>
        <label>Requested Ship Dates</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Requested Ship Dates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>