NATTQA-ENV/force-app/main/default/objects/Requested_Ship_Dates__c/fields/CONTAINER_Account__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Requested Ship Dates</relationshipLabel>
    <relationshipName>Requested_Ship_Dates</relationshipName>
    <type>Lookup</type>
</CustomField>