NATTQA-ENV/force-app/main/default/objects/Requested_Ship_Dates__c/fields/CONTAINER_Quote_Number__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Quote_Number__c</fullName>
    <label>Quote Number</label>
    <referenceTo>SBQQ__Quote__c</referenceTo>
    <relationshipLabel>Requested Ship Dates</relationshipLabel>
    <relationshipName>Requested_Ship_Dates</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>