NATTQA-ENV/force-app/main/default/objects/Requested_Ship_Dates__c/fields/CONTAINER_Ship_To_Destination__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Ship_To_Destination__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ship To Destination</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.CONTAINER_Account__c</field>
            <operation>equals</operation>
            <valueField>NATT_Address__c.NATT_Account__c</valueField>
        </filterItems>
        <filterItems>
            <field>NATT_Address__c.NATT_Type__c</field>
            <operation>equals</operation>
            <value>Ship To</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>NATT_Address__c</referenceTo>
    <relationshipLabel>Requested Ship Dates</relationshipLabel>
    <relationshipName>Requested_Ship_Dates</relationshipName>
    <type>Lookup</type>
</CustomField>