NATTQA-ENV/force-app/main/default/objects/Requested_Ship_Dates__c/fields/CONTAINER_Week_Of__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Week_Of__c</fullName>
    <label>Week Of</label>
    <type>Date</type>
</CustomField>